Videre jobbing på oppgaven. Begynte på en innlogging for anonyme brukere. Begynte på et validerings-script som sjekker om en bruker er innlogget. Lagde et logout-script. Lagde en side for brukerinstillinger. Jobbet mer med innlogging og bytte passord-siden.

--- a/header.html
+++ b/header.html
@@ -1,9 +1,14 @@
 <header>
     <nav>
         <ul>
-            <li><a>Forside</a></li>
-            <li><a>Innstillinger</a></li>
+            <li><a href="#">Forside</a></li>
         </ul>
     </nav>
-    <div><a>Logg ut</a></div>
+    <div class="user-options">
+        <ul>
+            <li><a href="user-settings.php">Brukerinnstillinger</a></li>
+            <li><form method="post" action="logout.php"><button>Logg ut</button></form></li>
+        </ul>
+
+    </div>
 </header>
